# 42_Fractol

./: CMakeLists.txt  Makefile  README.md
inc/: complex.h  control.h  fractol.h  graphics.h  main.h  option_handler.h  picture.h  tread_handle.h
libft/: CMakeLists.txt  Makefile
libft/includes/: libft.h
libft/src/: ft_atoi_hex.c  ft_num_size.c  ft_print_list.c
minilibx_macos/: Makefile  _README_  mlx.h
minilibx_macos/man/man1/: mlx_loop.1  mlx_new_image.1  mlx_new_window.1  mlx_pixel_put.1
minilibx_macos/man/man3/: mlx.1  mlx_loop.1  mlx_new_image.1
src/: complex.c  control.c  control1.c  fractol.c  graphics.c  handle_opt.c  main.c  option_handler.c  picture.c  tread_handle.c  window.c
